--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,8 @@
     "serve:ssr": "node dist/angular-starter/server/main.js",
     "build:ssr": "ng build && ng run angular-starter:server",
     "prerender": "ng run angular-starter:prerender",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "ci_prod_build": "npm run ng build -- --configuration production --output-path=dist/prod"
   },
   "author": {
     "name": "danny",
